--- a/_config.yml
+++ b/_config.yml
@@ -4,4 +4,6 @@ description: >- # this means to ignore newlines until "baseurl:"
   This is the future page for Jay Bulsara's website.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://jaybulsara.dev" # the base hostname & protocol for your site, e.g. http://example.com
-github_username:  jaxbulsara
+github_username: jaxbulsara
+
+destination: docs
