--- a/_config.yml
+++ b/_config.yml
@@ -7,3 +7,11 @@ url: "https://jaybulsara.dev" # the base hostname & protocol for your site, e.g.
 github_username: jaxbulsara
 
 destination: docs
+
+exclude:
+  - CNAME
+  - .liquidrc
+  - README.md
+  - build.sh
+  - serve.sh
+  - workspace.code-workspace
