--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Jay Bulsara
 email: jay@jaybulsara.dev
 description: >- # this means to ignore newlines until "baseurl:"
-  Jay Bulsara's website. If it looks bad, email me about it!
+  This is my website. If it looks bad, email me about it!
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://jaybulsara.dev" # the base hostname & protocol for your site, e.g. http://example.com
 github_username: jaxbulsara
